--- a/src/main/java/com/up/student/view/form3.form
+++ b/src/main/java/com/up/student/view/form3.form
@@ -13,7 +13,7 @@
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="啊啊啊"/>
+          <text value="销售工作人员"/>
         </properties>
       </component>
       <component id="c96e9" class="javax.swing.JButton" binding="button2" default-binding="true">
@@ -21,7 +21,7 @@
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Button"/>
+          <text value="订单"/>
         </properties>
       </component>
       <component id="322bf" class="javax.swing.JButton" binding="button3" default-binding="true">
@@ -29,7 +29,7 @@
           <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Button"/>
+          <text value="顾客"/>
         </properties>
       </component>
     </children>
